# multitap-pad

./: ChangeLog  Makefile.am  configure.ac
applet/: Makefile.am  applet.c
data/: Makefile.am  im-multipress.conf  multitap-pad.desktop
gtk-im/: Makefile.am  Makefile.in  gtkimcontextmultipress.c  im-context.c  im-context.h  im-protocol.c  im-protocol.h  immultipress.c
src/: Makefile.am  Makefile.in  multitap-pad-main.c  multitap-pad-remote.h
