confdir = $(sysconfdir)/multitap-pad
conf_DATA = im-multipress.conf

desktopdir = $(datadir)/applications/inputmethods
desktop_DATA = multitap-pad.desktop

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = multitap-pad.png

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(conf_DATA) $(desktop_DATA) $(pixmaps_DATA)

